TP3 (exercice 4 pas encore fini)

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -1,4 +1,16 @@
 # GUI properties
+january=janvier
+february=février
+march=mars
+april=avril
+may=mai
+june=juin
+july=juillet
+august=août
+september=septembre
+october=octobre
+november=novembre
+december=décembre
 monday=Lundi
 tuesday=Mardi
 wednesday=Mercredi
@@ -14,3 +26,18 @@ fri=Ven
 sat=Sam
 sun=Dim
 next=Suivant
+
+file=Fichier
+load=Ouvrir
+save=Enregistrer
+quit=Fermer
+
+edit=Edition
+view=Vue
+month=Mois
+week=Semaine
+day=Jour
+
+help=Aide
+display=Affichage
+about=A propos
