Ajout des interractions sur les JMenuItem

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -34,10 +34,12 @@ quit=Fermer
 
 edit=Edition
 view=Vue
-month=Mois
-week=Semaine
-day=Jour
+MONTH_VIEW=Mois
+WEEK_VIEW=Semaine
+DAY_VIEW=Jour
 
 help=Aide
 display=Affichage
 about=A propos
+
+notImplementedError=Cette fonctionnalit\u00e9 n'est pas encore impl\u00e9ment\u00e9.
