Début du ExamEventWidget

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -1,16 +1,16 @@
 # GUI properties
 january=janvier
-february=fÃ©vrier
+february=février
 march=mars
 april=avril
 may=mai
 june=juin
 july=juillet
-august=aoÃ»t
+august=août
 september=septembre
 october=octobre
 november=novembre
-december=dÃ©cembre
+december=décembre
 monday=Lundi
 tuesday=Mardi
 wednesday=Mercredi
@@ -42,4 +42,5 @@ help=Aide
 display=Affichage
 about=A propos
 
-notImplementedError=Cette fonctionnalit\u00e9 n'est pas encore impl\u00e9ment\u00e9.
+notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
+parseDateError=La date doit respecté le format demandé.
