La navigabilité dans les vues Mois et Semaine fonctionnent. Le jour sélectionné est surligné en orange.

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -27,6 +27,7 @@ sat=Sam
 sun=Dim
 next=Suivant
 
+newEvent=Nouvel évènement
 file=Fichier
 load=Ouvrir
 save=Enregistrer
@@ -44,3 +45,5 @@ about=A propos
 
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
 parseDateError=La date doit respecté le format demandé.
+
+ok=OK
