--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -43,6 +43,12 @@ help=Aide
 display=Affichage
 about=A propos
 
+new=Nouveau
+
+date=Date
+time=Heure
+student=Etudiant
+
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
 parseDateError=La date doit respecté le format demandé.
 
