Nombreux ajouts dont gestion des personnes

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -1,55 +1,41 @@
-# GUI properties
-january=janvier
-february=février
-march=mars
-april=avril
-may=mai
-june=juin
-july=juillet
-august=août
-september=septembre
-october=octobre
-november=novembre
-december=décembre
-monday=Lundi
-tuesday=Mardi
-wednesday=Mercredi
-thursday=Jeudi
-friday=Vendredi
-saturday=Samedi
-sunday=Dimanche
-mon=Lun
-tue=Mar
-wed=Mer
-thu=Jeu
-fri=Ven
-sat=Sam
-sun=Dim
-next=Suivant
-
-newEvent=Nouvel évènement
+# General commands
 file=Fichier
 load=Ouvrir
 save=Enregistrer
 quit=Fermer
-
 edit=Edition
 view=Vue
-MONTH_VIEW=Mois
-WEEK_VIEW=Semaine
-DAY_VIEW=Jour
-
 help=Aide
 display=Affichage
 about=A propos
-
 new=Nouveau
+ok=OK
+addItem=Ajouter
+editItem=Editer
+delItem=Supprimer
 
+# Calendar
+newEvent=Nouvel évènement
+MONTH_VIEW=Mois
+WEEK_VIEW=Semaine
+DAY_VIEW=Jour
 date=Date
 time=Heure
-student=Etudiant
+
+# People
+general=Général
+contact=Contact
+firstname=Prénom
+lastname=Nom
+phone=Téléphone
+mail=Mail
+type_student=Etudiant
+type_jury=Membre du jury
+type_students=Etudiants
+type_jurys=Jury
+add_student=Ajouter un étudiant
+add_jury=Ajouter un membre du jury
+managePeople=Gérer les personnes
 
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
-parseDateError=La date doit respecté le format demandé.
 
-ok=OK
