--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -38,4 +38,6 @@ add_jury=Ajouter un membre du jury
 managePeople=Gérer les personnes
 
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
-
+saveError=Impossible de sauvegarder. Vérifiez les permissions du fichier.
+loadError=Impossible de charger ce fichier.
+noStudentsError=Ajout de créer un examen, commencez par ajouter quelques étudiants dans Edition > Gérer les personnes.
