--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -40,4 +40,4 @@ managePeople=Gérer les personnes
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
 saveError=Impossible de sauvegarder. Vérifiez les permissions du fichier.
 loadError=Impossible de charger ce fichier.
-noStudentsError=Ajout de créer un examen, commencez par ajouter quelques étudiants dans Edition > Gérer les personnes.
+noStudentsError=Avant de planifier une soutenance, commencez par ajouter quelques étudiants dans Edition > Gérer les personnes.
