Il est maintenant possible d'éditer un évènement

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -15,7 +15,8 @@ editItem=Editer
 delItem=Supprimer
 
 # Calendar
-newEvent=Nouvel évènement
+newEvent=Créer une soutenance
+editEvent=Editer une soutenance
 MONTH_VIEW=Mois
 WEEK_VIEW=Semaine
 DAY_VIEW=Jour
