Ajout de la possibilité d'affecter des membres du jury à une soutenance

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -13,6 +13,8 @@ ok=OK
 addItem=Ajouter
 editItem=Editer
 delItem=Supprimer
+and=et
+others=autres
 
 # Calendar
 newEvent=Créer une soutenance
@@ -37,6 +39,9 @@ type_jurys=Jury
 add_student=Ajouter un étudiant
 add_jury=Ajouter un membre du jury
 managePeople=Gérer les personnes
+nobody=Personne
+selectJury=Sélectionner les membres du jury
+
 
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
 saveError=Impossible de sauvegarder. Vérifiez les permissions du fichier.
