Ajout d'un système de détection de conflits

--- a/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
+++ b/iutjava/workspace/iuttp/src/edu/iut/resources/strings/res_fr.properties
@@ -41,6 +41,8 @@ add_jury=Ajouter un membre du jury
 managePeople=Gérer les personnes
 nobody=Personne
 selectJury=Sélectionner les membres du jury
+checkConflicts=Chercher les conflits
+noConflicts=Aucun conflit n'a été détecté
 
 
 notImplementedError=Cette fonctionnalité n'est pas encore implémenté.
